# OpenGL_ImGui_Demo

./: .gitignore  CMakeLists.txt  Camera.h  README.md  SpineSimServer.sln  SpineSimServer.vcxproj  SpineSimServer.vcxproj.filters  scene.h
include/: PCH.cpp  PCH.h
model/nanosuit/: nanosuit.mtl
shader/: lp_blinn_phong.frag.glsl
src/: Camera.h  Mesh.h  Model.h  PCH.h  main.cpp  mygui.h
src/glad/: glad.c
src/scene/: Camera.cpp  InteractiveScene.cpp  InteractiveScene.h  Scene.cpp  Scene.h  camera.hpp  scene.cpp  scene.hpp
src/scene/gui/: Mouse.cpp  Mouse.h  interactivescene.cpp  interactivescene.hpp
